...
        searchController.searchBar.accessibilityIdentifier = "repository-search"
        navigationItem.searchController = searchController
        definesPresentationContext = true
    }
    
    func setupTableView() {
        self.title = "Repositórios"
        view.accessibilityIdentifier = "Main View"
        self.tableView.register(cellType: HomeCell.self)
        self.tableView.delegate = self
        self.tableView.dataSource = self
        self.viewModel
            .onFetched
            .drive(onNext: { [unowned self] in
...
